Inclusão de dependencias
Inclusão de mapstruct.
Inclusão de maven compiler.
Inclusão de repositorios.